--- a/index.html
+++ b/index.html
@@ -85,6 +85,11 @@
         <li><a href="./assets/my_hobbies.html">My Hobbies</a></li>
         <li><a href="./assets/contact_me.html">Contact Me</a></li>
     </ul>
+    <footer>
+        <small>
+        <p>@ 2024 Sekiro</p>
+        </small>
+    </footer>
 
 
 </body>
